/************************************************************************************
 * Copyright (C) 2012-2018 E.R.P. Consultores y Asociados, C.A.                     *
 * Contributor(s): Yamel Senih ysenih@erpya.com                                     *
 * This program is free software: you can redistribute it and/or modify             *
 * it under the terms of the GNU General Public License as published by             *
 * the Free Software Foundation, either version 2 of the License, or                *
 * (at your option) any later version.                                              *
 * This program is distributed in the hope that it will be useful,                  *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                   *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	See the                     *
 * GNU General Public License for more details.                                     *
 * You should have received a copy of the GNU General Public License                *
 * along with this program.	If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.grpc.util";
option java_outer_classname = "ADempiereWebStore";
option objc_class_prefix = "HLW";

import "proto/client.proto";

package data;

//	Web Store Service used for ADempiere integration with vue store front api
service WebStore {
	//	Create Customer: POST /api/user/create
	rpc CreateCustomer(CreateCustomerRequest) returns (Customer) {}
	//  Reset Password from Store: POST /api/user/reset-password
  	rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
	//  Change Password: POST /api/user/change-password
	rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
	//  Get Customer: GET /api/user/me
	rpc GetCustomer(GetCustomerRequest) returns (Customer) {}
	//  Get Stock: GET /api/stock/check/sku
	rpc GetStock(GetStockRequest) returns (Stock) {}
	//  List Stock: GET /api/stock/list
	rpc ListStocks(ListStocksRequest) returns (ListStocksResponse) {}
	//  List Products: GET /api/product/list
	rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
	//  List Products: GET /api/product/render-list
	rpc ListRenderProducts(ListRenderProductsRequest) returns (ListRenderProductsResponse) {}
	//	Service for get a resource from resource uuid: GET /img
	rpc GetResource(GetResourceRequest) returns (stream Resource) {}
	//	Create Cart: POST /api/cart/create
	rpc CreateCart(CreateCartRequest) returns (Cart) {}
	//	Pull Cart: GET /api/cart/pull
	rpc GetCart(GetCartRequest) returns (Cart) {}
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#get-api-cart-pull
message GetCartRequest {
	ClientRequest client_request = 1;
	int32 id = 2;
	string uuid = 3;
	bool is_guest = 4;
}

// https://docs.storefrontapi.com/guide/default-modules/api.html#post-api-cart-create
message CreateCartRequest {
	ClientRequest client_request = 1;
	bool is_guest = 2;
}

//	Cart for store
message Cart {
	int32 id = 1;
	string uuid = 2;
	repeated CartItem items = 3;
}

//	Cart Item
message CartItem {
	int32 product_id = 1;
	string sku = 2;
	double quantity = 3;
	string name = 4;
	double price = 5;
	enum ProductType {
		//	Simple Product
		SIMPLE = 0;
		//	Configurable Product
		CONFIGURABLE = 1;
		//	Grouped Product
		GROUPED = 2;
		//	Virtual Product
		VIRTUAL = 3;
		//	Bundle Product
		BUNDLE = 4;
		//	Downloadable Product
		DOWNLOADABLE = 5;
		//	Gift Cards
		GIFT = 6;
	}
	ProductType product_type = 6;
}

// https://docs.storefrontapi.com/guide/default-modules/api.html#image-module
message GetResourceRequest {
	ClientRequest client_request = 1;
	string resource_uuid = 2;
	string resource_name = 3;
	int64 width = 4;
	int64 height = 5;
	enum Operation {
		RESIZE = 0;
		CROP = 1;
		FIX = 2;
		IDENTIFY = 3;
	}
	//	Operation
	Operation operation = 6;
}

// Resource Chunk
message Resource {
    bytes data = 1;
}


//	https://docs.storefrontapi.com/guide/default-modules/api.html#post-api-user-create
message CreateCustomerRequest {
	ClientRequest client_request = 1;
	string email = 2;
	string first_name = 3;
	string last_name = 4;
	string password = 5;
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#get-api-user-me
message GetCustomerRequest {
	ClientRequest client_request = 1;
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#get-api-stock-check-sku
message GetStockRequest {
	ClientRequest client_request = 1;
	string sku = 2;
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#get-api-stock-list
message ListStocksRequest {
	ClientRequest client_request = 1;
	string sku = 2;
	int32 page_size = 3;
	string page_token = 4;
}

//	List of Stock
message ListStocksResponse {
	int64 record_count = 1;
	repeated Stock stocks = 2;
	string next_page_token = 3;
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#api-product-list
message ListProductsRequest {
	ClientRequest client_request = 1;
	repeated string skus = 2;
	int32 page_size = 3;
	string page_token = 4;
}

//	List of Products
message ListProductsResponse {
	int64 record_count = 1;
	repeated Product products = 2;
	string next_page_token = 3;
}

//	Stock
message Stock {
	int32 product_id = 1;
	int32 store_id = 2;
	double quantity = 3;
	bool is_in_stock = 4;
	bool is_decimal_quantity = 5;
	bool is_show_default_notification_message = 6;
	bool is_use_config_minimum_quantity = 7;
    double minimum_quantity = 8;
    bool is_use_config_minimum_sale_quantity = 9;
    double minimum_sale_quantity = 10;
    bool is_use_config_maximum_sale_quantity = 11;
    double maximum_sale_quantity = 12;
    bool is_use_config_backorders = 13;
    double backorders = 14;
    bool is_use_config_notify_stock_quantity = 15;
    double notify_stock_quantity = 16;
    bool is_use_config_quantity_increments = 17;
    double quantity_increments = 18;
    bool is_use_config_enable_quantity_increments = 19;
    bool is_enable_quantity_increments = 20;
    bool is_use_config_manage_stock = 21;
    bool is_manage_stock = 22;
    string low_stock_date = 23;
    bool is_decimal_divided = 24;
    double stock_status_changed_auto = 25;
}

//	Product
message Product {
	int32 id = 1;
	string sku = 2;
	string name = 3;
	double price = 4;
	enum Status {
		STATUS_UNKNOW = 0;
		ENABLED = 1;
		DISABLED = 2;
	}
	Status status = 5;
	enum Visibility {
		VISIBILITY_UNKNOW = 0;
		NOT_VISIBLE = 1;
		IN_CATALOG = 2;
		IN_SEARCH = 3;
		BOTH = 4;
	}
	Visibility visibility = 6;
	int32 product_group_id = 7;
	string created = 8;
	string updated = 9;
	repeated string product_links = 10;
	repeated string tier_prices = 11;
	repeated Attribute custom_attributes = 12;
	Criteria search_criteria = 13;
}

//	https://docs.storefrontapi.com/guide/default-modules/api.html#api-product-list
message ListRenderProductsRequest {
	ClientRequest client_request = 1;
	repeated string skus = 2;
	int32 page_size = 3;
	string page_token = 4;
}

//	List of Products Rendered
message ListRenderProductsResponse {
	int64 record_count = 1;
	repeated RenderProduct render_products = 2;
	string next_page_token = 3;
}

//	Product Rendered
message RenderProduct {
	int32 id = 1;
	string name = 2;
	string type = 3;
	int32 store_id = 4;
	string url = 5;
	enum ProductType {
		//	Simple Product
		SIMPLE = 0;
		//	Configurable Product
		CONFIGURABLE = 1;
		//	Grouped Product
		GROUPED = 2;
		//	Virtual Product
		VIRTUAL = 3;
		//	Bundle Product
		BUNDLE = 4;
		//	Downloadable Product
		DOWNLOADABLE = 5;
		//	Gift Cards
		GIFT = 6;
	}
	ProductType product_type = 6;
	PriceInfo price_info = 7;
}


//	Product Price Info
message PriceInfo {
	double final_price = 1;
	double max_price = 2;
	double max_regular_price = 3;
	double minimal_regular_price = 4;
	double special_price = 5;
	double minimal_price = 6;
	double regular_price = 7;
	FormattedPrice formatted_price = 8;
	TaxAdjustment tax_adjustment = 9;
	string currency_code = 10;
}

//	Formatted Price
message FormattedPrice {
	string final_price = 1;
	string max_price = 2;
	string minimal_price = 3;
	string max_regular_price = 4;
	string minimal_regular_price = 5;
	string special_price = 6;
	string regular_price = 7;
}

//	Tax Adjustments
message TaxAdjustment {
	double final_price = 1;
	double max_price = 2;
	double max_regular_price = 3;
	double minimal_regular_price = 4;
	double special_price = 5;
	double minimal_price = 6;
	double regular_price = 7;
	string weee_adjustment = 8;
	FormattedPrice formatted_price = 9;
}

//	Attribute
message Attribute {
	string attribute_code = 1;
	string value = 2;
	repeated string values = 3;
}

//	Condition
message Criteria {
	repeated Condition conditions = 1;
}

// Condition for query data
message Condition {
	string columnName = 1;
	string value = 2;
	enum Operator {
		EQUAL = 0;
		NOT_EQUAL = 1;
		LIKE = 2;
		NOT_LIKE = 3;
		GREATER = 4;
		GREATER_EQUAL = 5;
		LESS = 6;
		LESS_EQUAL = 7;
		BETWEEN = 8;
		NOT_NULL = 9;
		NULL = 10;
		IN = 11;
		NOT_IN = 12;
	}
	//	Operators
	Operator operator = 3;
}

//
message Customer {
	int32 id = 1;
	int32 business_partner_group_id = 2;
	string created = 3;
	string updated = 4;
	string organization_name = 5;
	string email = 6;
	string first_name = 7;
	string last_name = 8;
	int32 web_store_id = 9;
	int32 website_id = 10;
	repeated Address addresses = 11;
}

//	Address
message Address {
	int32 id = 1;
	string name = 2;
	//	Location
	Region region = 3;
	City city = 4;
	string address1 = 5;
	string address2 = 6;
	string address3 = 7;
	string address4 = 8;
	string phone = 9;
	string postal_code = 10;
	bool is_ship_to = 11;
}

//	City
message City {
	int32 id = 1;
	string name = 2;
}

//	Region
message Region {
	int32 id = 1;
	string name = 2;
}

// https://docs.storefrontapi.com/guide/default-modules/api.html#post-api-user-reset-password
message ResetPasswordRequest {
  ClientRequest client_request = 1;
	string user_name = 2;
	string email = 3;
}

// Reset Password Response
message ResetPasswordResponse {
	enum ResponseType {
		OK = 0;
		USER_NOT_FOUND = 1;
		TOKEN_NOT_FOUND = 2;
		ERROR = 3;
	}
	ResponseType response_type = 1;
}

// https://docs.storefrontapi.com/guide/default-modules/api.html#post-api-user-change-password
message ChangePasswordRequest {
  ClientRequest client_request = 1;
	string current_password = 2;
	string new_password = 3;
}

// Change Password Response
message ChangePasswordResponse {
	enum ResponseType {
		OK = 0;
		USER_NOT_FOUND = 1;
		TOKEN_NOT_FOUND = 2;
		ERROR = 3;
	}
	ResponseType response_type = 1;
}
